<resources>
    <string name="app_name">project</string>
    <string name="welcome_to_app">Welcome to App</string>
    <string name="register">register</string>
    <string name="sig_in">sig in</string>
    <string name="hint1">username</string>
    <string name="hint2">password</string>
    <string name="Account1">Doctor</string>
    <string name="Account2">Patient</string>
    <string name="Account3">Admin</string>
    <string name="Account4">Cashier</string>
    <string name="headline">Login as</string>
    <string name="hinta">Username</string>
    <string name="hintb">Password</string>
    <string name="Logina">Login</string>
    <string name="p1">v3v zvx</string>
    <string name="Login2">Login Doctor</string>
    <string name="Done">Done</string>
    <string name="LoginAsPatient">Login As Patient</string>
    <string name="signin">SignIn</string>
    <string name="Headline">Find The Doctor Location</string>
    <string name="EnterThePostalCode">Enter The Postal Code</string>
    <string name="Find">Find The Doctor</string>
    <string name="Appointment">Make An Appointment</string>
    <string name="Online">Get Online Details</string>
    <string name="Availability">Check Doctors Availability</string>
    <string name="Query">Enter your Query/problem here</string>
    <string name="Enter">Enter Here</string>
    <string name="Msp">Msp Coverage(Yes/No)</string>
    <string name="wdw">Patient Name</string>
    <string name="Docid">DoctorId</string>
    <string name="Patientid">PatientId</string>
    <string name="DocName">Doctors Initials</string>
    <string name="Logout">Logout</string>
    <string name="String">Send Query</string>
    <string name="EnterTheId">Enter The Id</string>
    <string name="Solution">Post The Solution</string>
    <string name="post">Post</string>
    <string name="see">See the message from patient</string>
    <string name="Da">Doctors Availability Time</string>
    <string name="mt">Monday 10am to 5 pm</string>
    <string name="tt">Tuesday 10 am to 5 pm</string>
    <string name="Wt">Wednesday 12 pm to 6 pm</string>
    <string name="Tht">Thursday 12am to 5 pm</string>
    <string name="Ft">Friday 12pm to 5 pm</string>
    <string name="St">Saturday 5pm to 12am</string>
    <string name="Tut">Tuesday 10am to 5pm</string>
    <string name="LlOG">Log Out</string>
    <string name="History">History</string>
    <string name="Bill">Bill Will be displaued here</string>
    <string name="EnterYourName">Name</string>
    <string name="hints">Enter the Date Of Appointment</string>
    <string name="hintt">Enter the time of appointment</string>
    <string name="hintq">Doctor Id</string>
    <string name="hinty">Enter the Doctor id</string>
    <string name="Stq">Patiend Id</string>
    <string name="hint">BookAppointment</string>
    <string name="appoi">See the appointments</string>
    <string name="hinti">Enter your id</string>
    <string name="seex">see</string>
    <string name="alogin">Admin Login</string>
    <string name="Head">See All the appointments made by patient by entering your Id</string>
    <string name="Headinga">Enter Your Details For Booking the Appointments</string>
    <string name="CashierL">Cashier Login</string>
    <string name="issta">Enter Id and Status to change the record</string>
    <string name="ey">Enter Your Id To see the message from the patient</string>
    <string name="Hint1">Message Will Be Displayed Here</string>
    <string name="hintp">Enter the password</string>
    <string name="hinte">Enter the email address</string>
    <string name="hintps">Enter the postal Code</string>
    <string name="Eny">Enter your name</string>
    <string name="hintw">Enter the values you want to change</string>
    <string name="hnt">Enter the postal code</string>
    <string name="hintd">Appointments will be displayed here</string>
    <string name="ShowPass">Show Password</string>
    <string name="ddada">Enter Password</string>
    <string name="shp">Show Password</string>
    <string name="Stringchange">Change Doctor and Patient Record</string>
    <string name="ccd">ChangeCashierDetails</string>
    <string name="UPD">Update User Details</string>
    <string name="ACD">Add Cashier Details</string>
    <string name="Cc">Create Cashier</string>
    <string name="Na">Enter Name</string>
    <string name="eem">Enter Email</string>
    <string name="Epa">Enter Password</string>
    <string name="Create">Create</string>
    <string name="CreateCa">Create Cashier</string>
    <string name="EnterEmail">Enter Email Address</string>
    <string name="Update">Update</string>
    <string name="Enam">Enter Name</string>
    <string name="EnterEm">Enter Email</string>
    <string name="pass">Enter Password</string>
    <string name="Hintid">Enter Id</string>
    <string name="cc">Enter the id of the respective record of which you want to change details</string>
    <string name="enmc">Enter the name</string>
    <string name="add">Add</string>
    <string name="EnterPn">Enter Patient Number</string>
    <string name="Enn">Enter Your Number(To view Message)</string>
    <string name="Ennv">Enter Your Number(To View The Appointments)</string>
    <string name="EnterYourNumber">Enter Doctor No.</string>
    <string name="hintn">Enter Your No.</string>
    <string name="ennys">Enter your number</string>

</resources>
