<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Appointments">

    <EditText
        android:id="@+id/ids"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hinti"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.116"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.236" />

    <TextView
        android:id="@+id/all"
        android:layout_width="312dp"
        android:layout_height="97dp"
        android:layout_marginTop="80dp"
        android:hint="@string/hintd"
        android:textColorHint="#03A9F4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.232"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ids"
        app:layout_constraintVertical_bias="0.293" />

    <Button
        android:id="@+id/seea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seex"
        app:layout_constraintBottom_toTopOf="@+id/all"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.071"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ids"
        app:layout_constraintVertical_bias="0.13" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="365dp"
        android:layout_height="80dp"
        android:hint="@string/Ennv"
        android:text="@string/Head"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/ids"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.365" />
</androidx.constraintlayout.widget.ConstraintLayout>